--- a/src/footer.css
+++ b/src/footer.css
@@ -1,12 +1,10 @@
-.footer {
-    position: fixed;
-    bottom: 0;
-    left: 50%;
-    transform: translateX(-50%);
-    text-align: center;
-    background-color: #333;
-    color: white;
-    font-family: sans-serif;
-    padding: 5px; 
-    width: 100%;
-  }
+
+
+.contact-logo img
+{
+  padding: auto;
+  margin: auto;
+  height: 250px;
+  width: 250px;
+  text-align: left;
+}
