--- a/src/Pages/eboard_style.module.css
+++ b/src/Pages/eboard_style.module.css
@@ -1,23 +1,26 @@
 .container {
-    display: grid;
-    grid-template-columns: repeat(3,0.5fr); /* 3 columns */
-     /* Add margin for the container */
-  }
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: space-between;
+  /* Add margin for the container */
+  margin: 0px;
+}
 
-  .main_img {
-    border-radius: 10%;
-    max-width: 300px;
-    height: 400px;
-    border: 5px solid #474745; /* Add a blue border with a 5px width */
-    box-shadow: 20px 20px 10px rgba(0, 0, 0, 0.2); /* Add a slight shadow */
-  }
-  .link :hover{
-    transition: transform 0.3s ease; /* Add a smoother transition for the transform property */
-    transform: scale(1.2);
-  }
-  
-  .haccs {
-    font-size: 50px;
-    font-family: 'Lato', sans-serif;
-    color: #ff6600;
-  }
+.main_img {
+  border-radius: 10%;
+  max-width: 400px;
+  height: 500px;
+  border: 5px solid #474745; /* Add a blue border with a 5px width */
+  box-shadow: 0px 0px 1000px rgba(219, 157, 126, 0.976); /* Add a slight shadow */
+}
+.link :hover{
+  transition: transform 0.3s ease; /* Add a smoother transition for the transform property */
+  transform: scale(1.2);
+}
+
+.haccs {
+  font-size: 50px;
+  font-family: 'Lato', sans-serif;
+  color: #ff6600;
+}
