modified height to auto in .alice-carousel - app.css

--- a/src/App.css
+++ b/src/App.css
@@ -51,6 +51,7 @@
 .alice-carousel {
   position: relative;
   width: 100%;
+  height:auto;
   margin: auto;
   direction: ltr;
   text-align: center;
