--- a/src/App.css
+++ b/src/App.css
@@ -42,14 +42,15 @@
   }
 }
 
+
 .sliderimg{
   width: 100%;
-  height: 500px;
+  /*height: 500px;*/
   object-fit: cover;
 }
 
 .alice-carousel {
-  position: relative;
+  /*position: relative;*/
   width: 100%;
   height:auto;
   margin: auto;
