--- a/src/Pages/home_style.module.css
+++ b/src/Pages/home_style.module.css
@@ -1,41 +1,52 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap');
-
-
-.info{
-    display: grid;
-    grid-template-columns: repeat(2,0.5fr); /* 3 columns */
-
+@font-face {
+  font-family: 'Source Code Pro';
+  src: local('Source Code Pro'), url(https://fonts.gstatic.com/s/sourcecodepro/v13/mrl8iJctOUT__6iNOj3yARsK4xQ.woff2) format('woff2');
+  font-weight: 400;
+  font-style: normal;
 }
 
+.info {
+  display: grid;
+  grid-template-columns: 1fr 0.5fr;
+  grid-gap: 10px;
+}
+
+.icons {
+  grid-column: 1/2;
+  grid-row: 1/2;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+  top:100px;
+ 
+}
+
+.icons img{
+  width: 150px;
+  height: 150px;
+  padding: 70px;
+}
+
+.content {
+  grid-column: 2/3;
+  grid-row: 1/2;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+  right: 300px;
+  top: 70px;
+  
+}
+
+.vision,
 .mission {
-    width: fit-content;
-    height: fit-content;
-    display: grid;
-    place-items: "center";
-    padding: 50px;
-    
-  }
+  width: 100%;
+  padding: 30px;
   
-.vision {
-width: fit-content;
-height: fit-content;
-display: grid;
-place-items: "center";
-padding: 50px;
 }
-  
-  
-  
-.visionText, .missionText {
-height: 200px;
-font-size: 20px;
-border: 10px solid black;
-height:fit-content;
-
-font-family: 'Source Code Pro', monospace;
-font-weight: bold;
-padding:150px,
-
-
-
+p{
+  font-family: 'Source Code Pro', monospace;
 }
