--- a/src/footer.css
+++ b/src/footer.css
@@ -10,6 +10,9 @@
   justify-content: center; 
   align-items: center; 
   margin-bottom: 20px; 
+  position: relative;
+  left: 500px;
+  
 }
 
 .contact-logo img {
