--- a/src/footer.css
+++ b/src/footer.css
@@ -1,8 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap');
 
-.indent
+div.footer-container
 {
-  padding-left: 600px;
+  align-items: center;
+  justify-content: center;
 }
 
 .contact-logo {
@@ -67,4 +68,28 @@
 
 .footer-icons a:hover {
   color: #ff6600;
+}
+
+.contact{
+  display: flex;
+  align-items: center;
+  font-family: 'Lato', sans-serif;
+}
+
+.contact-logo{
+  width:250px;
+  height: 250px;
+  padding: 100px 60px 0px 20px;
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+}
+
+.contact h3
+{
+  color: #ff6600;
+}
+
+.contact h3 p{
+  font-family: 'Lato', sans-serif;
 }
