--- a/src/Pages/eboard_style.module.css
+++ b/src/Pages/eboard_style.module.css
@@ -1,9 +1,17 @@
+p.name {
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+  display: flex;
+  font-size: 25px;
+  margin-top: 10px;
+}
+
 .container {
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
   justify-content: space-between;
-  /* Add margin for the container */
   margin: 0px;
 }
 
