--- a/src/Pages/home_style.module.css
+++ b/src/Pages/home_style.module.css
@@ -59,6 +59,11 @@ p{
 }
 
 .carousel{
-  width: 1700px;
-  height: 1000px;
+  width: 100%;
+  height: 100%;
+}
+
+.carousel_img{
+  width: 100%;
+  height: 100vh;
 }
