--- a/src/Pages/eboard_style.module.css
+++ b/src/Pages/eboard_style.module.css
@@ -32,3 +32,11 @@ p.name {
   font-family: 'Lato', sans-serif;
   color: #ff6600;
 }
+
+.Position
+{
+  font-size: 50px;
+  font-family: 'Lato', sans-serif;
+  color: #ff6600;
+
+}
