template grid for eboard fixed images should be kept capitalize, media query for iphone added

--- a/src/Pages/eboard_style.module.css
+++ b/src/Pages/eboard_style.module.css
@@ -1,3 +1,9 @@
+
+
+
+
+
+
 p.name {
   text-align: center;
   align-items: center;
@@ -5,14 +11,6 @@ p.name {
   display: flex;
   font-size: 25px;
   margin-top: 10px;
-}
-
-.container {
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: row;
-  justify-content: space-between;
-  margin: 0px;
 }
 
 .main_img {
@@ -40,3 +38,37 @@ p.name {
   color: #ff6600;
 
 }
+
+.container{
+  align-items: center;
+ display: grid;
+ grid-template-columns: repeat(2,1fr); 
+}
+
+
+/* Simple media query for phonesm */
+@media screen and (max-device-width: 412px) and (orientation:portrait){
+.main_img{
+  max-width: 200px;
+  max-height: 200px;
+  border: 5px solid #474745; /* Add a blue border with a 5px width */
+  box-shadow: 0px 0px 1000px rgba(218, 5, 5, 0.976);
+}
+.container{
+  align-items: center;
+  display: grid;
+  grid-template-columns: repeat(1fr,1fr);
+
+}
+
+}
+
+/*Left over notes:
+
+* Create meadia query for this page in specific
+
+* Create media query for other pages
+
+* merge to main and set up server on raspebrry  or github 
+
+*/
