--- a/src/Pages/eboard_style.module.css
+++ b/src/Pages/eboard_style.module.css
@@ -2,66 +2,101 @@
 
 
 
+@media only screen and (min-width: 1200px) {
 
 
-p.name {
-  text-align: center;
-  align-items: center;
-  justify-content: center;
-  display: flex;
-  font-size: 25px;
-  margin-top: 10px;
+  p.name {
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    font-size: 25px;
+    margin-top: 10px;
+  }
+
+  .main_img {
+    border-radius: 10%;
+    max-width: 400px;
+    height: 500px;
+    border: 5px solid #474745; /* Add a blue border with a 5px width */
+    box-shadow: 0px 0px 1000px rgba(219, 157, 126, 0.976); /* Add a slight shadow */
+  }
+  .link :hover{
+    transition: transform 0.3s ease; /* Add a smoother transition for the transform property */
+    transform: scale(1.2);
+  }
+
+  .haccs {
+    font-size: 50px;
+    font-family: 'Lato', sans-serif;
+    color: #ff6600;
+  }
+
+  .Position
+  {
+    font-size: 50px;
+    font-family: 'Lato', sans-serif;
+    color: #ff6600;
+
+  }
+
+  .container{
+    align-items: center;
+   display: grid;
+   grid-template-columns: repeat(2,1fr); 
+  }
 }
 
-.main_img {
-  border-radius: 10%;
-  max-width: 400px;
-  height: 500px;
-  border: 5px solid #474745; /* Add a blue border with a 5px width */
-  box-shadow: 0px 0px 1000px rgba(219, 157, 126, 0.976); /* Add a slight shadow */
-}
-.link :hover{
-  transition: transform 0.3s ease; /* Add a smoother transition for the transform property */
-  transform: scale(1.2);
+@media only screen and (max-width: 480px) {
+  body{
+    max-width: 480px;
+  }
+  p.name {
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    font-size: 25px;
+    margin-top: 10px;
+  }
+
+  .main_img {
+    border-radius: 10%;
+    max-width: 200px;
+    height: 200px;
+    border: 5px solid #474745; /* Add a blue border with a 5px width */
+    box-shadow: 0px 0px 1000px rgba(219, 157, 126, 0.976); /* Add a slight shadow */
+  }
+  .link :hover{
+    transition: transform 0.3s ease; /* Add a smoother transition for the transform property */
+    transform: scale(1.2);
+  }
+
+  .haccs {
+    font-size: 25px;
+    font-family: 'Lato', sans-serif;
+    color: #ff6600;
+  }
+
+  .Position
+  {
+    font-size: 50px;
+    font-family: 'Lato', sans-serif;
+    color: #ff6600;
+
+  }
+
+  .container{
+    align-items: center;
+   display: grid;
+   grid-template-columns: repeat(1,1fr); 
+  }
 }
 
-.haccs {
-  font-size: 50px;
-  font-family: 'Lato', sans-serif;
-  color: #ff6600;
-}
-
-.Position
-{
-  font-size: 50px;
-  font-family: 'Lato', sans-serif;
-  color: #ff6600;
-
-}
-
-.container{
-  align-items: center;
- display: grid;
- grid-template-columns: repeat(2,1fr); 
-}
 
 
 /* Simple media query for phonesm */
-@media screen and (max-device-width: 412px) and (orientation:portrait){
-.main_img{
-  max-width: 200px;
-  max-height: 200px;
-  border: 5px solid #474745; /* Add a blue border with a 5px width */
-  box-shadow: 0px 0px 1000px rgba(218, 5, 5, 0.976);
-}
-.container{
-  align-items: center;
-  display: grid;
-  grid-template-columns: repeat(1fr,1fr);
 
-}
-
-}
 
 /*Left over notes:
 
