--- a/src/Pages/eboard_style.module.css
+++ b/src/Pages/eboard_style.module.css
@@ -1,8 +1,16 @@
 
-
-
-
 @media only screen and (min-width: 1200px) {
+
+
+  .President {
+    display: grid;
+    place-items: center;
+  }
+
+  .Member {
+    display: grid;
+    place-items: center;
+  }
 
 
   p.name {
@@ -20,6 +28,7 @@
     height: 500px;
     border: 5px solid #474745; /* Add a blue border with a 5px width */
     box-shadow: 0px 0px 1000px rgba(219, 157, 126, 0.976); /* Add a slight shadow */
+    align-content: center;
   }
   .link :hover{
     transition: transform 0.3s ease; /* Add a smoother transition for the transform property */
@@ -30,6 +39,7 @@
     font-size: 50px;
     font-family: 'Lato', sans-serif;
     color: #ff6600;
+    text-align: center;
   }
 
   .Position
@@ -40,27 +50,39 @@
 
   }
 
-  .container{
-    align-items: center;
-   display: grid;
-   grid-template-columns: repeat(2,1fr); 
+  .container
+  {
+  align-items: center;
+  justify-content: center;
+  display: grid;
+  grid-template-columns: repeat(2,1fr); 
+  place-items: center;
   }
 }
 
 @media only screen and (max-width: 480px) {
+  
+  .President {
+    display: grid;
+    place-items: center;
+  }
+
+  .Member {
+    display: grid;
+    place-items: center;
+  }
+
   body{
     max-width: 480px;
   }
   p.name {
     text-align: center;
-    align-items: center;
-    justify-content: center;
-    display: flex;
-    font-size: 25px;
+    font-size:15px;
     margin-top: 10px;
   }
 
   .main_img {
+    align-items: center;
     border-radius: 10%;
     max-width: 200px;
     height: 200px;
@@ -73,23 +95,33 @@
   }
 
   .haccs {
-    font-size: 25px;
+    font-size:25px;
     font-family: 'Lato', sans-serif;
     color: #ff6600;
+    text-align:center;
   }
+
+  h1 {
+    font-size: 20px;
+    text-align: center;
+  }
+
 
   .Position
   {
-    font-size: 50px;
     font-family: 'Lato', sans-serif;
     color: #ff6600;
+    place-items: center;
+    display: grid;
 
   }
 
   .container{
     align-items: center;
-   display: grid;
-   grid-template-columns: repeat(1,1fr); 
+    justify-content: center;
+    display: grid;
+    grid-template-columns: repeat(2,1fr); 
+    place-items: center;
   }
 }
 
