--- a/src/Pages/eboard_style.module.css
+++ b/src/Pages/eboard_style.module.css
@@ -94,7 +94,7 @@
     transform: scale(1.2);
   }
 
-  .haccs {
+  span.haccs {
     font-size:25px;
     font-family: 'Lato', sans-serif;
     color: #ff6600;
