--- a/src/Pages/home_style.module.css
+++ b/src/Pages/home_style.module.css
@@ -62,3 +62,25 @@ p{
   width: 1700px;
   height: 1000px;
 }
+
+@media only screen and (max-width: 480px) {
+
+  .carousel{
+    width: 100%;
+    height: 300px;
+    align-content: center;
+  }
+
+div.container div.info div.icons img
+{
+  width: 2px;
+  height: auto;
+
+}
+
+.mission .mission_text
+{
+  font-size: 10px;
+}
+
+}
