Fixed desktop view, straightened out. All tabs optimized for mobile view

--- a/src/Pages/eboard_style.module.css
+++ b/src/Pages/eboard_style.module.css
@@ -106,6 +106,15 @@
     text-align: center;
   }
 
+  .haccs
+  {
+    font-size: 25px;
+    font-family: 'Lato', sans-serif;
+    color: #ff6600;
+    text-align: center;
+
+  }
+
 
   .Position
   {
